Make sure like is visible

--- a/src/assets/scss/components/_preview-bb.scss
+++ b/src/assets/scss/components/_preview-bb.scss
@@ -8,6 +8,7 @@
   position: absolute;
   right: 3rem;
   top: 1rem;
+  z-index: 50;
 }
 
 .bb-like-button {
